--- a/HvZ_p/res/values/strings.xml
+++ b/HvZ_p/res/values/strings.xml
@@ -6,11 +6,11 @@
     <string name="menu_text">Function call to get player list here!</string>
     <string name="menu_title">Player List Menu Title</string>
     <string name="players">Player List</string>
-    <string name="zombie_label">Zombie Player Code</string>
-    <string name="human_label">Human Player Code</string>
+    <string name="zombie_label">Zombie Player Code: </string>
+    <string name="human_label">Human Player Code: </string>
     <string name="report">Report A Kill</string>
     <string name="mini_map">Mini Map</string>
-    <string name="codeLabel">Player Code</string>
+    <string name="codeLabel">Player Code: </string>
     <string name="id_label"></string>
     <string name="profile">Profile Settings</string>
 
